autogen swagger
