# src/routes/v1/index.js
@@ -1,32 +1,11 @@
 const express = require('express');
-const baseRoute = require('./base/base.route');
-const authRoute = require('./auth/auth.route');
-const userRoute = require('./user/user.route');
-const config = require('../../core/configs/config');
-const { cloneDeep } = require('lodash');
-const { path } = require('../../app');
 
 const router = express.Router();
 
-const routesV1 = [
-  {
-    path: 'base',
-    route: baseRoute,
-  },
-  {
-    path: 'auth',
-    route: authRoute,
-  },
-  {
-    path: 'users',
-    route: userRoute,
-  },
-];
+router.use('/base', require('./base/base.route'))
 
-// router.use(`/base`, baseRoute);
+router.use('/auth', require('./auth/auth.route'))
 
-routesV1.forEach((route) => {
-  router.use(`/${route.path}`, require(route.pathFolder));
-});
+router.use('/user', require('./user/user.route'))
 
 module.exports = router;
